# Thermasight

./: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: wild_boar_fell_east_256_1m.tif  wild_boar_fell_east_256_lcm.tif
docs/: DATA.md  MODEL.md  README.md  ROADMAP.md  TODO.md  VALIDATION.md  model_correction.md
docs/pdf/: README.md  build.sh  thermasight.qmd
tests/: conftest.py  test_cli.py  test_io_dem.py  test_io_land_cover.py  test_io_land_cover_wms.py  test_io_mosaic.py  test_physics_coupling.py  test_physics_flow.py  test_physics_heating.py  test_physics_hydrology.py  test_physics_leaky_accum.py  test_physics_pipeline.py  test_physics_wind_tilt.py  test_solar_irradiance.py  test_solar_position.py  test_solar_shadow.py  test_terrain_morphometry.py  test_triggers.py  test_viz.py
thermal_model/: __init__.py  __main__.py  cli.py
thermal_model/io/: __init__.py  dem.py  land_cover.py  land_cover_wms.py  mosaic.py
thermal_model/physics/: __init__.py  coupling.py  flow.py  heating.py  hydrology.py  leaky_accum.py  pipeline.py  wind_tilt.py
thermal_model/solar/: __init__.py  irradiance.py  position.py  shadow.py
thermal_model/terrain/: __init__.py  morphometry.py
thermal_model/triggers/: __init__.py  cluster.py  export.py
thermal_model/viz/: __init__.py  diagnostics.py  hillshade.py
tools/: build_lcm_fixture.py
